apps/platform/keycloak/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-keycloak
spec:
  selector:
    app.kubernetes.io/name: platform-keycloak
  ports:
    - name: http
      port: 80
      targetPort: http
