apps/platform/keycloak/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: auth.hybridops.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-keycloak
                port:
                  number: 80
